--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="intro_info">
         데일리큐티는\n하루에 한번\n성경을 읽고\n생각을 적는\n나만의\n큐티 북이야.
     </string>
+
+    <string name="main_noContent">아직\n말씀이\n없어요..ㅠ</string>
+
     <string name="introNext_button">다음으로.</string>
     <string name="introStart_button">시작하기.</string>
     <string name="intro_nameInfo">너의 이름이\n뭐야..?</string>
